[package]
name = "lve"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.57"
ash = { version = "0.36.0", default-features = false, features = ["linked", "debug"] }
vk-shader-macros = "0.2.7"
gpu-allocator = "0.17.0"
ash-window = "0.9.1"
winit = "0.26.1"
